fix: pass target triplet to build-update.sh for cross-compilation
- Add TARGET_TRIPLET environment variable support in build-update.sh
- Pass matrix.target from workflow to build-update.sh
- Fix BUNDLE_DIR path when using specific target
- Prevents missing uv-trampoline binary errors during cross-compilation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,8 +118,10 @@ jobs:
       - name: Build and sign update
         env:
           RELEASE_URL_BASE: ${{ secrets.RELEASE_URL_BASE || 'https://github.com/pollen-robotics/reachy-mini-desktop-app/releases/download/v' }}
+          TARGET_TRIPLET: ${{ matrix.target }}
         run: |
           export RELEASE_URL_BASE
+          export TARGET_TRIPLET
           bash ./scripts/build-update.sh prod "${{ steps.version.outputs.version }}"
 
       - name: Upload release artifacts
