fix: specify bash shell for version extraction on Windows
- Add explicit shell: bash to Extract version steps
- Fixes PowerShell syntax error on Windows runners
- Ensures bash syntax works correctly on all platforms

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Extract version
         id: version
+        shell: bash
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           if [ "$VERSION" = "$GITHUB_REF" ]; then
@@ -148,6 +149,7 @@ jobs:
 
       - name: Extract version
         id: version
+        shell: bash
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           if [ "$VERSION" = "$GITHUB_REF" ]; then
