fix: add bash shell to Setup signing key step for Windows
- Add explicit shell: bash to Setup signing key step
- Fixes PowerShell syntax error on Windows runners
- Ensures bash syntax works correctly on all platforms

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,7 @@ jobs:
           echo "Version: $VERSION"
 
       - name: Setup signing key
+        shell: bash
         env:
           TAURI_SIGNING_KEY: ${{ secrets.TAURI_SIGNING_KEY }}
           TAURI_PUBLIC_KEY: ${{ secrets.TAURI_PUBLIC_KEY }}
