--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,49 @@ jobs:
             export APPLE_SIGNING_IDENTITY
             export APPLE_TEAM_ID
             
-            echo "✅ Variables exportées pour Tauri"
+            # Importer le certificat dans le keychain pour que Tauri puisse l'utiliser
+            echo "📦 Import du certificat dans le keychain..."
+            KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
+            KEYCHAIN_PASSWORD="$(openssl rand -base64 32)"
+            
+            # Créer un keychain temporaire
+            security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+            security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+            security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+            
+            # Décoder et importer le certificat
+            echo "$APPLE_CERTIFICATE" | base64 --decode > /tmp/certificate.pem
+            
+            # Essayer d'importer comme .p12 d'abord (si mot de passe fourni)
+            if [ -n "$APPLE_CERTIFICATE_PASSWORD" ]; then
+              security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -P "$APPLE_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security || {
+                echo "⚠️  Import .p12 échoué, tentative avec .cer..."
+                security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || true
+              }
+            else
+              # Pour .cer, essayer d'importer directement
+              security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || {
+                echo "⚠️  Import direct échoué, tentative avec format DER..."
+                # Essayer en format DER
+                openssl x509 -inform PEM -in /tmp/certificate.pem -outform DER -out /tmp/certificate.der 2>/dev/null || true
+                security import /tmp/certificate.der -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || true
+              }
+            fi
+            
+            # Configurer le keychain pour codesign
+            security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PATH" "$KEYCHAIN_PATH" || true
+            
+            # Vérifier que l'identité est disponible
+            echo "🔍 Identités disponibles dans le keychain:"
+            security find-identity -v -p codesigning "$KEYCHAIN_PATH" || true
+            
+            # Ajouter le keychain à la liste de recherche
+            security list-keychains -d user -s "$KEYCHAIN_PATH" $(security list-keychains -d user | sed 's/^[[:space:]]*//' | tr '\n' ' ')
+            
+            # Nettoyer
+            rm -f /tmp/certificate.pem /tmp/certificate.der
+            
+            echo "✅ Certificat importé dans le keychain temporaire"
           fi
       
       - name: Build Tauri app
