--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
           # Vérifier que les secrets sont définis
-          # APPLE_CERTIFICATE_PASSWORD est optionnel (peut être vide pour .cer)
+          # APPLE_CERTIFICATE_PASSWORD est optionnel (peut être vide)
           # APPLE_TEAM_ID est optionnel car il est déjà dans APPLE_SIGNING_IDENTITY
           if [ -z "$APPLE_CERTIFICATE" ] || [ -z "$APPLE_SIGNING_IDENTITY" ]; then
             echo "⚠️  Secrets Apple non configurés - le build ne sera pas signé"
@@ -53,11 +53,8 @@ jobs:
           else
             echo "✅ Variables Apple configurées depuis GitHub Secrets"
             echo "APPLE_SIGNING_IDENTITY=${APPLE_SIGNING_IDENTITY}"
-            # APPLE_CERTIFICATE_PASSWORD peut être vide pour .cer (ou contenir juste un espace)
-            # Normaliser : traiter un espace comme vide
-            APPLE_CERTIFICATE_PASSWORD=$(echo "$APPLE_CERTIFICATE_PASSWORD" | tr -d '[:space:]')
             if [ -z "$APPLE_CERTIFICATE_PASSWORD" ]; then
-              echo "APPLE_CERTIFICATE_PASSWORD=(vide - OK pour .cer ou .p12 sans mot de passe)"
+              echo "APPLE_CERTIFICATE_PASSWORD=(vide - OK si le .p12 n'a pas de mot de passe)"
             else
               echo "APPLE_CERTIFICATE_PASSWORD=(défini)"
             fi
@@ -70,65 +67,16 @@ jobs:
               echo "APPLE_TEAM_ID=${APPLE_TEAM_ID}"
             fi
             
-            # Exporter les variables pour Tauri (elles sont déjà dans env, mais on s'assure qu'elles sont exportées)
-            export APPLE_CERTIFICATE
-            export APPLE_CERTIFICATE_PASSWORD
-            export APPLE_SIGNING_IDENTITY
-            export APPLE_TEAM_ID
-            
-            # Importer le certificat dans le keychain pour que Tauri puisse l'utiliser
-            echo "📦 Import du certificat dans le keychain..."
-            KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
-            KEYCHAIN_PASSWORD="$(openssl rand -base64 32)"
-            
-            # Créer un keychain temporaire
-            security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-            security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
-            security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-            
-            # Décoder et importer le certificat
-            echo "$APPLE_CERTIFICATE" | base64 --decode > /tmp/certificate.pem
-            
-            # Essayer d'importer comme .p12 d'abord (si mot de passe fourni et non vide)
-            if [ -n "$APPLE_CERTIFICATE_PASSWORD" ] && [ "$APPLE_CERTIFICATE_PASSWORD" != " " ]; then
-              security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -P "$APPLE_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security || {
-                echo "⚠️  Import .p12 échoué, tentative avec .cer..."
-                security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || true
-              }
-            else
-              # Pour .cer, essayer d'importer directement
-              security import /tmp/certificate.pem -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || {
-                echo "⚠️  Import direct échoué, tentative avec format DER..."
-                # Essayer en format DER
-                openssl x509 -inform PEM -in /tmp/certificate.pem -outform DER -out /tmp/certificate.der 2>/dev/null || true
-                security import /tmp/certificate.der -k "$KEYCHAIN_PATH" -T /usr/bin/codesign -T /usr/bin/security || true
-              }
-            fi
-            
-            # Configurer le keychain pour codesign
-            security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PATH" "$KEYCHAIN_PATH" || true
-            
-            # Vérifier que l'identité est disponible
-            echo "🔍 Identités disponibles dans le keychain:"
-            security find-identity -v -p codesigning "$KEYCHAIN_PATH" || true
-            
-            # Ajouter le keychain à la liste de recherche
-            security list-keychains -d user -s "$KEYCHAIN_PATH" $(security list-keychains -d user | sed 's/^[[:space:]]*//' | tr '\n' ' ')
-            
-            # Nettoyer
-            rm -f /tmp/certificate.pem /tmp/certificate.der
-            
-            echo "✅ Certificat importé dans le keychain temporaire"
+            echo "✅ Configuration prête - Tauri importera automatiquement le certificat depuis APPLE_CERTIFICATE"
           fi
       
       - name: Build Tauri app
         env:
-          # Ne pas passer APPLE_CERTIFICATE si c'est un .cer seul (déjà importé dans le keychain)
-          # Tauri utilisera le certificat depuis le keychain via APPLE_SIGNING_IDENTITY
+          # Tauri va utiliser ces variables pour importer et utiliser le certificat
+          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
+          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD || '' }}
           APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          # APPLE_CERTIFICATE_PASSWORD normalisé (espace = vide)
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD || '' }}
         run: |
           yarn tauri build
           # Vérifier la signature si APPLE_SIGNING_IDENTITY était défini
