--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -28,6 +28,9 @@ jobs:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             platform: windows-x86_64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            platform: linux-x86_64
 
     runs-on: ${{ matrix.os }}
 
@@ -307,6 +310,23 @@ jobs:
         shell: bash
         working-directory: src-tauri
         run: |
+          yarn tauri build --target ${{ matrix.target }}
+
+      - name: Build Tauri app (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        shell: bash
+        working-directory: src-tauri
+        run: |
+          # Install dependencies required for AppImage build
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwebkit2gtk-4.1-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            build-essential \
+            pkg-config \
+            libssl-dev
           yarn tauri build --target ${{ matrix.target }}
 
       - name: Sign all binaries (macOS only)
