--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -406,10 +406,28 @@ jobs:
         run: |
           APP_BUNDLE="src-tauri/target/${{ matrix.target }}/release/bundle/macos/Reachy Mini Control.app"
           
+          if [ ! -d "$APP_BUNDLE" ]; then
+            echo "❌ App bundle not found: $APP_BUNDLE"
+            exit 1
+          fi
+          
           # Create ZIP for notarization
-          ZIP_PATH="src-tauri/target/${{ matrix.target }}/release/bundle/macos/Reachy Mini Control.zip"
-          cd "$(dirname "$APP_BUNDLE")"
-          ditto -c -k --keepParent "$(basename "$APP_BUNDLE")" "$(basename "$ZIP_PATH")"
+          BUNDLE_DIR="src-tauri/target/${{ matrix.target }}/release/bundle/macos"
+          ZIP_PATH="$BUNDLE_DIR/Reachy Mini Control.zip"
+          
+          echo "📦 Creating ZIP for notarization..."
+          echo "   Bundle: $APP_BUNDLE"
+          echo "   ZIP: $ZIP_PATH"
+          
+          cd "$BUNDLE_DIR"
+          ditto -c -k --keepParent "Reachy Mini Control.app" "Reachy Mini Control.zip"
+          
+          if [ ! -f "$ZIP_PATH" ]; then
+            echo "❌ Failed to create ZIP file: $ZIP_PATH"
+            exit 1
+          fi
+          
+          echo "✅ ZIP created: $ZIP_PATH ($(du -h "$ZIP_PATH" | cut -f1))"
           
           echo "📦 Submitting app for notarization..."
           xcrun notarytool submit "$ZIP_PATH" \
