--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -611,6 +611,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: main  # ✅ Checkout main branch (not detached HEAD from tag)
+          fetch-depth: 0  # ✅ Fetch full history to allow rebase/merge
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract version
@@ -685,12 +687,16 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          
+          # ✅ Pull latest changes from main to avoid conflicts
+          git pull origin main --rebase || git pull origin main
+          
           git add docs/latest.json
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Update latest.json for v${{ steps.version.outputs.version }}"
-            git push origin HEAD:main
+            git push origin main
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
