--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows: ["Release Cross-Platform", "Update Manifest Only"]
+    workflows: ["Release Cross-Platform"]
     types:
       - completed
     branches:
