--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -174,12 +174,18 @@ jobs:
               # tauri signer expects the key file to be base64-encoded
               # Clean the raw key first (remove leading/trailing whitespace)
               CLEANED_RAW=$(printf '%s' "$TAURI_SIGNING_KEY" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
-              # Encode to base64 (tauri signer will decode it automatically)
-              printf '%s' "$CLEANED_RAW" | base64 -w 0 > ~/.tauri/reachy-mini.key
+              # Encode to base64 and remove ALL newlines/whitespace (tauri signer is strict)
+              if [[ "$OSTYPE" == "darwin"* ]]; then
+                # macOS: base64 -b 0 or pipe to tr -d '\n'
+                printf '%s' "$CLEANED_RAW" | base64 | tr -d '\n\r' > ~/.tauri/reachy-mini.key
+              else
+                # Linux: base64 -w 0
+                printf '%s' "$CLEANED_RAW" | base64 -w 0 | tr -d '\n\r' > ~/.tauri/reachy-mini.key
+              fi
               echo "✅ Encoded raw format private key to base64 (for tauri signer)"
             else
-              # Already base64 format - use directly (just clean whitespace)
-              CLEANED_KEY=$(printf '%s' "$TAURI_SIGNING_KEY" | tr -d '\n\r' | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
+              # Already base64 format - use directly (remove ALL whitespace including newlines)
+              CLEANED_KEY=$(printf '%s' "$TAURI_SIGNING_KEY" | tr -d '\n\r\t ' | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
               printf '%s' "$CLEANED_KEY" > ~/.tauri/reachy-mini.key
               echo "✅ Using base64 format private key (from GitHub Secrets)"
             fi
