--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -670,14 +670,11 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: write
+      actions: read
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: main  # ✅ Checkout main branch (not detached HEAD from tag)
-          fetch-depth: 0  # ✅ Fetch full history to allow rebase/merge
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract version
         id: version
@@ -741,27 +738,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Copy latest.json to docs/ for GitHub Pages
+      - name: Prepare latest.json for GitHub Pages
         run: |
           mkdir -p docs
           cp latest.json docs/latest.json
-          echo "✅ Copied latest.json to docs/"
+          echo "✅ Prepared latest.json for GitHub Pages"
 
-      - name: Commit and push latest.json to docs/
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          
-          # ✅ Pull latest changes from main to avoid conflicts
-          git pull origin main --rebase || git pull origin main
-          
-          git add docs/latest.json
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update latest.json for v${{ steps.version.outputs.version }}"
-            git push origin main
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload latest.json artifact for GitHub Pages
+        uses: actions/upload-artifact@v4
+        with:
+          name: latest-json-pages
+          path: docs/latest.json
+          retention-days: 1
 
