--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "tauri:build": "tauri build",
     "build:sidecar-macos": "bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-linux": "bash ./scripts/build/build-sidecar-unix.sh",
+    "build:sidecar-windows": "powershell ./scripts/build/build-sidecar-windows.ps1",
     "build:sidecar-macos:develop": "REACHY_MINI_SOURCE=develop bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-linux:develop": " REACHY_MINI_SOURCE=develop bash ./scripts/build/build-sidecar-unix.sh",
+    "build:sidecar-windows:develop": "powershell -Command \"$env:REACHY_MINI_SOURCE='develop'; ./scripts/build/build-sidecar-windows.ps1\"",
     "build:update:dev": "bash ./scripts/build/build-update.sh dev",
     "build:update:prod": "bash ./scripts/build/build-update.sh prod",
     "serve:updates": "bash ./scripts/utils/serve-updates.sh",
