--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-positioner = "2"
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2.0"
-# Removed tauri-plugin-macos-permissions - using custom implementation in src/permissions/mod.rs
+tauri-plugin-macos-permissions = "2.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serialport = "4.2"
