feat: v0.6.0-alpha.1 - wheel optimizations, macOS signing, app fetching
🎡 Wheel Component:
- Virtualization: only render ~240° arc for better performance
- GSAP physics animations with smooth momentum
- CSS variable counter-rotation (no JS re-render)
- Softer, less bouncy animations (power1.out)

🔐 macOS Signing:
- Auto re-sign Python binaries after pip install
- Entitlements support (disable-library-validation)
- Dev vs production mode detection

📱 App Fetching:
- Refactored fetchOfficialAppIds to avoid duplication
- Retry with exponential backoff
- Filter official vs non-official apps

📚 Documentation:
- Added CI/signing/Tauri best practices docs

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Reachy
 Test
 
 .analysis/
+.claude-4.5-sonnet-analysis/
 
 node_modules
 dist
@@ -81,3 +82,6 @@ src-tauri/binaries/
 # Rust build artifacts in uv-wrapper
 uv-wrapper/target/
 uv-wrapper/target/**/*
+
+# Tutorial videos - too large, never commit
+src/assets/tutorial/
