--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tauri-app",
   "private": true,
-  "version": "0.4.6",
+  "version": "0.6.0-alpha.1",
   "type": "module",
   "engines": {
     "node": ">=24.4.0",
@@ -18,7 +18,7 @@
     "build:sidecar-macos": "bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-linux": "bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-windows": "powershell ./scripts/build/build-sidecar-windows.ps1",
-    "build:sidecar-macos:develop": "REACHY_MINI_SOURCE=develop bash ./scripts/build/build-sidecar-unix.sh",
+    "'build:sidecar-macos:develop'": "REACHY_MINI_SOURCE=develop bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-linux:develop": " REACHY_MINI_SOURCE=develop bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-windows:develop": "powershell -Command \"$env:REACHY_MINI_SOURCE='develop'; ./scripts/build/build-sidecar-windows.ps1\"",
     "build:sidecar-macos:main": "REACHY_MINI_SOURCE=main bash ./scripts/build/build-sidecar-unix.sh",
